--- a/notebooks/exp_training.ipynb
+++ b/notebooks/exp_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c5726498",
    "metadata": {
     "execution": {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c303eeae",
    "metadata": {
     "execution": {
@@ -2437,7 +2437,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "working",
+   "display_name": "workdir",
    "language": "python",
    "name": "python3"
   },
@@ -2451,7 +2451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
